// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputSnapshot should render normal TextInput 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnTZi hEqjwc"
  >
    <input
      class="sc-bczRLJ gBziFm"
      id="id"
      placeholder="placeholder"
      type="password"
    />
  </div>
</DocumentFragment>
`;

exports[`TextInputSnapshot should render normal TextInput without id 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnTZi hEqjwc"
  >
    <input
      class="sc-bczRLJ gBziFm"
      placeholder="placeholder"
      type="password"
    />
  </div>
</DocumentFragment>
`;
